# WraithEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CompileShaders.bat  Dependencies.lua  README.md  WraithEngine.sln  WraithEngine.sln.DotSettings  premake5.lua
Editor/: premake5.lua
Engine/: Engine.vcxproj  Engine.vcxproj.filters  WraithEngine.vcxproj  WraithEngine.vcxproj.filters  premake5.lua
Engine/Shaders/: SimpleShader.vert
Engine/Source/: Main.cpp  wrpch.cpp
Engine/Source/Core/: Core.h  Logger.cpp  Logger.h  Utils.h  VulkanBase.h
Engine/Source/Engine/: Application.cpp  Application.h  Engine.cpp  Engine.h
Engine/Source/Graphics/: Device.cpp  Device.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  SwapChain.cpp  SwapChain.h
Engine/Source/Platform/: Window.cpp  Window.h
Engine/Source/Renderer/: Renderer.cpp  Renderer.h
Engine/Source/Wraith/Core/: Application.h  Core.h
Engine/Source/Wraith/Core/Application/: Application.h
Engine/Source/Wraith/Core/Containers/: Array.h  ContainerDefines.h  String.h
Engine/Source/Wraith/Core/Launch/: Launch.h
Engine/src/Wraith/: Essential.h
Engine/src/Wraith/Containers/: Array.h  String.h  Vector.h
Engine/src/Wraith/Core/: ConfigMacros.h  Launch.h  LiteralTypes.h  PlatformMacros.h
Sandbox/: Sandbox.vcxproj  Sandbox.vcxproj.filters  premake5.lua
Sandbox/Source/Sandbox/: Sandbox.cpp  SandboxApp.cpp
Sandbox/src/Sandbox/: SandboxApp.h
Scripts/: GenerateProjectFiles-Win64.bat
include/Wraith/: Input.h  Logger.h  Singleton.h  Time.h
include/WraithEngine/: Application.h
include/WraithEngine/Core/: PoolAllocator.h  Singleton.h  StackLinkedList.h
include/glad/: glad.h
shaders/: SimpleShader.frag  SimpleShader.vert
src/: wrpch.cpp  wrpch.h
src/Asset/: AssetManager.h
src/Core/: Application.cpp  Application.h  Assert.h  Core.h  Engine.cpp  Engine.h  Logger.cpp  Logger.h  Object.h  Time.h  TimeManager.cpp  TimeManager.h  Types.h  Utils.h  Vulkan.h  VulkanBase.cpp  VulkanBase.h
src/Engine/: Application.cpp  Engine.cpp  Engine.h
src/Graphics/: Device.cpp  Device.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  PipelineBuilder.cpp  PipelineBuilder.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h  Swapchain.cpp  Swapchain.h  VkFactory.cpp  VkFactory.h  Vulkan.cpp  Vulkan.h
src/IO/: IO.h
src/Input/: Input.h  InputManager.cpp  InputManager.h
src/Math/: Math.h
src/Memory/: AllocatorBase.cpp  AllocatorBase.h  FreeListAllocator.cpp  FreeListAllocator.h  MemoryCommon.h  StackAllocator.cpp  StackAllocator.h
src/Platform/: GLFWWindow.cpp  GLFWWindow.h  SDL2Input.cpp  SDL2Input.h  SDL2Window.cpp  SDL2Window.h  Window.cpp  Window.h
src/Renderer/: Renderer.cpp  Renderer.h
src/Scene/: CommonComponents.h
src/Utils/: DeletionQueue.h  Singleton.h  VkFactory.cpp  VkFactory.h
utils/: GenerateProjectFiles-VS2022.bat
wraith-core/: main.cpp  wraith-core.vcxproj  wraith-core.vcxproj.filters
wraith-core/src/: glad.c
wraith-core/src/graphics/: BatchRenderer2D.cpp  BatchRenderer2D.h  Renderable2D.h  Renderer2D.h  SimpleRenderer2D.cpp  SimpleRenderer2D.h  StaticSprite.cpp  StaticSprite.h  batch_renderer_2d.cpp  batch_renderer_2d.h  renderable_2d.h  renderer_2d.h  shader.cpp  shader.h  simple_renderer_2d.cpp  simple_renderer_2d.h  sprite.cpp  sprite.h  static_sprite.cpp  static_sprite.h  window.cpp  window.h
wraith-core/src/graphics/buffers/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  buffer.cpp  buffer.h  index_buffer.cpp  index_buffer.h  vertex_array.cpp  vertex_array.h
wraith-core/src/math/: math.h  matrix4.cpp  matrix4.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
wraith-core/src/shaders/: basic.frag  basic.vert
wraith-core/src/utils/: file_utils.h  timer.h
